# translation-fidelity

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  spike.py  try_it.py
data/: ,gitignore  combined_long.csv
scripts/: calibrate.py
src/translation_fidelity/: __init__.py  calibration_data.py  core.py
tests/: test_core.py
